--- a/style/index-21.css
+++ b/style/index-21.css
@@ -17,11 +17,18 @@ body {
 {
 	overflow: hidden !important;
 }
+.burger{
+	transform: translate(100%);
+	display: none;
+}
 .d-flex
 {
 	display: flex;
 	justify-content: space-between;
 	align-items: center !important;
+}
+.btn__blue:hover{
+	background: #1C62FF !important;
 }
 .btnn
 {
@@ -246,23 +253,6 @@ section
     opacity: 1 !important;
     font-size: 10px !important;
 }
-@media (max-width: 480px){
-	.slick-dots li{
-		width: 5px !important;
-		height: 5px !important;
-	}
-	.slick-dots li button{
-		width: 5px !important;
-		height: 5px !important;
-		padding: 0px 0px 0px 0px !important;
-	}
-	.slick-dots li button:before
-{
-    color:  #FFB5AA !important;
-    opacity: 1 !important;
-    font-size: 5px !important;
-}  
-}
 .slick-dots li button:hover, .slick-dots li button:focus {
     color: #FF725E !important;
 }
@@ -313,10 +303,7 @@ section
 }
 .slick-slide
 {
-	margin: 20px !important;
-}
-.body_1{
-	color: #152956;
+	margin: 15px !important;
 }
 .bank_card_image{
 	margin-left: 8px;
@@ -460,7 +447,7 @@ section
 	}
 
 
-}
+}}
 .element_text_body{
 font-family: Montserrat;
 font-size: 14px;
@@ -619,7 +606,7 @@ padding: 0px;
 .feedback__slider
 {
 	margin-top: 40px;
-	margin-bottom: 60px !important;
+	margin-bottom: 90px !important;
 }
 .feedback_text
 {
@@ -730,10 +717,6 @@ padding: 0px;
 	letter-spacing: 0.035em;
 	text-align: left;
 }
-.burger._active{
-	display: block;
-}
-
 .footer__bottom
 {
 	font-family: Montserrat;
@@ -820,26 +803,6 @@ footer
 	background-color: white;
 	border-radius: 50px;
 }
-.feedback__background2
-{
-	position: absolute;
-	top: 50%;
-	z-index: -2;
-	background-color: black;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	height: 261px;
-	width: 105%;
-	box-shadow: 5px 4px 20px 5px rgba(64, 123, 255, 0.1);
-	background-color: white;
-	border-radius: 50px;
-	opacity: 0.5;
-}
-@media (max-width: 650px){
-	  .feedback__background2{
-		  display: none;
-	  }
-}
 .blue__button
 {
 	outline: none !important;
@@ -859,8 +822,8 @@ footer
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
-	margin-top: 50px;
-	margin-bottom: 154px;
+	margin-top: 100px;
+	margin-bottom: 174px;
 }
 .footer__bottom
 {
@@ -1592,14 +1555,9 @@ footer
 }
 @media only screen and (max-width: 680px) 
 {
-	.service__body{
-		display: flex;
-		justify-content:center;align-items: center;
-		flex-direction: column;
-	}
 	.service__body p
 	{
-		width: 190px;
+		text-align: center !important;
 	}
 	.service__top
 	{
@@ -1695,19 +1653,20 @@ footer
 	}
 	.element_text_title{
 	font-family: Montserrat !important;
-	font-size: 18px !important;
+	font-size: 14px !important;
 	font-style: normal !important;
-	line-height: 22px !important;
+	font-weight: 400 !important;
+	line-height: 17px !important;
 	letter-spacing: 0.035em !important;
 	text-align: left !important;
 	}
 	.body_1
 	{
 	font-family: Montserrat !important;
-	font-size: 10px !important;
+	font-size: 8px !important;
 	font-style: normal !important;
 	font-weight: 400 !important;
-	line-height: 12px !important;
+	line-height: 10px !important;
 	letter-spacing: 0.035em !important;
 	text-align: left !important;
 	}
@@ -1910,27 +1869,24 @@ footer
 {
 	height: 210px !important	;
 }
-/* .services .slick-next::before{
-	content: url('../images/arr-r.svg');
+.feedback__background2
+{
 	position: absolute;
-	height: 30px;
-	width: 15px;
-
+	top: 50%;
+	z-index: -2;
+	background-color: black;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	height: 261px;
+	width: 105%;
+	box-shadow: 5px 4px 20px 5px rgba(64, 123, 255, 0.1);
+	background-color: white;
+	border-radius: 50px;
+	opacity: 0.5;
 }
-.services .slick-prev::before{
-	content: url('../images/arr-l.svg');
-	position: absolute;
-	height: 30px;
-	width: 15px;
-
-} */
-
-.btn.btn__blue{
-	margin-top: 17px;
-}
-@media (max-width: 992px){
-	  .sec1__left{
-		  margin-top: 30px !important;
+@media (max-width: 650px){
+	  .feedback__background2{
+		  display: none;
 	  }
 }
 .burger{
@@ -1960,9 +1916,7 @@ footer
 	right: 0	;
 	cursor: pointer;
 }
-body .price .price__title h3{
-	font-size: 20px;
-}
+
 
 .burger .container{
 	position: relative;
@@ -2084,90 +2038,7 @@ line-height: 15px;
 }
 .burger{
 	transform: translate(100%);
-	display: none;
 }
-.faq__slider {
-
-}
-.body__burg__text{
-	display: flex;
-	align-items: center;
-	transition: all 0.3s ease 0s;
-}
-.body__burg__text::before{
-	content: '';
-	width: 0px;
-	display: flex;
-	
-	height: 3px;
-	background: #407BFF;;
-	margin-right: 10px;
-	transition: all 0.3s ease 0s;
-
-}
-.body__burg__text:hover{
-	color: #407BFF;
-	font-weight: 600;
-}
-@media (min-width:992px){
-	 .body__burg__text:hover::before{
-	width: 100px;
-} 
-}
-@media (max-width: 480px){
-	  .slick-initialized .service.slick-slide  {
-		  margin-bottom: 10px !important;
-	  }
-	  .services.container{
-		  padding: 0px 0px 0px 0px;
-	  }
-	  .slick-initialized .slick-slide.faq {
-		      padding: 33px 28px;
-				background: #FFFFFF;
-			box-shadow: 5px 4px 20px 5px rgba(64, 123, 255, 0.1) !important;
-			border-radius: 25px;
-			margin: 20px 15px !important;
-	  }
-	  .faq h3{
-		  font-weight: 600 !important;
-	  }
-	  .container.faq-cont{
-		padding: 0px 0px !important;	
-		width: calc(100vw + 10px) !important;
-		transform: translateX(-20px);
-		}
-		/* .slick-dots li{
-			width: 5px !important;
-			height: 5px !important;
-		}
-		.slick-dots li button{
-			width: 5px !important;
-			padding: 0px 0px !important;
-		height: 5px !important;
-		}
-				.slick-dots li button::before{
-			width: 5px !important;
-			padding: 0px 0px !important;
-		height: 5px !important;
-		} */
-		.container.feedback_cont{
-					padding: 0px 0px !important;	
-		width: calc(100vw + 10px) !important;
-		transform: translateX(-20px);
-		}
-		.slick-initialized .slick-slide.feedback {
-			margin-bottom: 15px !important;
-			margin-left: 10px !important;
-			margin-right: 10px !important;
-		}
-}
-
-
-@media (max-width: 480px){
-	  .element_text{
-		  margin-left: 25px;
-	  }
-	  .advices_body_element.col-md-6.col-12{
-		  padding: 0px 0px !important;
-	  }
+body .price .price__title h3{
+	font-size: 20px;
 }
