--- a/style/header-13.css
+++ b/style/header-13.css
@@ -47,32 +47,6 @@
 	height: 1px;
 	transform: translateX(-50%);
 }
-.menu__navs li:hover p{
-	color: #407BFF !important;
-
-}
-.menu__navs li{
-	position: relative;
-}
-.menu__navs li::before{
-	position: absolute;
-	transition: all 0.3s ease 0s;
-	bottom: -2px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 0%;
-	height: 1px;
-	content: '';
-}
-.menu__navs li:hover::before{
-	position: absolute;
-	bottom: -2px;
-	background: #407BFF;
-	left: 50%;
-	width: 100%;
-	height: 1px;
-	transform: translateX(-50%);
-}
 .menu ul
 {
 	list-style: none;
@@ -157,6 +131,8 @@
 .top_bg img
 {
 	width: 100%;
+	max-height: 150px;
+
 }
 .top_bg
 {
@@ -172,4 +148,14 @@
 .sec1__left
 {
 	margin-top: 130px;
+}
+@media (max-width: 992px){
+	  .menu__navs{
+		  display: none !important; 
+	  }
+}
+@media (max-width: 992px){
+	  .menu__navs{
+		  display: none !important; 
+	  }
 }
