--- a/style/header-6.css
+++ b/style/header-6.css
@@ -47,32 +47,6 @@
 	height: 1px;
 	transform: translateX(-50%);
 }
-.menu__navs li:hover p{
-	color: #407BFF !important;
-
-}
-.menu__navs li{
-	position: relative;
-}
-.menu__navs li::before{
-	position: absolute;
-	transition: all 0.3s ease 0s;
-	bottom: -2px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 0%;
-	height: 1px;
-	content: '';
-}
-.menu__navs li:hover::before{
-	position: absolute;
-	bottom: -2px;
-	background: #407BFF;
-	left: 50%;
-	width: 100%;
-	height: 1px;
-	transform: translateX(-50%);
-}
 .menu ul
 {
 	list-style: none;
@@ -169,7 +143,49 @@
 	min-width: 690px;
 	left: 0px;	
 }
+.menu__navs li{
+	position: relative;
+}
+.menu__navs li::before{
+	position: absolute;
+	transition: all 0.3s ease 0s;
+	bottom: -2px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 0%;
+
+}
+.menu__navs li:hover::before{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	background: #407BFF;
+	left: 50%;
+	width: 100%;
+	height: 1px;
+	transform: translateX(-50%);
+}
 .sec1__left
 {
 	margin-top: 130px;
 }
+	  .menu_phone_singin{
+		  flex-direction: column;
+		  width: 100%;
+		  justify-content: flex-start;
+		  align-items: flex-start;
+		}
+		.menu_phone_bottom{
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+			align-items: center;
+			width: 100%;
+		}
+		.menu_phone_media {
+			padding-bottom: 25px;
+
+		}
+		.menu_phone_media span{
+			margin-right: 20px;
+		}
