--- a/style/login.css
+++ b/style/login.css
@@ -1,28 +1,23 @@
 
 .login__block{
-	margin-top: 234px !important;
+	margin-top: 120px !important;
 	margin-bottom: 150px !important;
 	text-align: center !important;
 }
 .block{
-	width: 67%;
+	width: 55%;
 
-	padding: 100px;
+	padding: 50px 100px;
 	border:2px solid #407BFF;
 	border-radius: 50px;
-	 position: relative;               /* 2 */
-   left: 50%;                         /* 3 */
-   transform: translate(-50%, 0%) 
-}
-@media only screen and (max-width: 1000px) {
-.block{
-	width: 100%;
-}
+	position: relative;               /* 2 */
+    left: 50%;                         /* 3 */
+    transform: translate(-50%, 0%) ;
 }
 .title__login{
 	color: #152956;
 	font-family: Montserrat;
-	font-size: 36px;
+	font-size: 24px;
 	font-style: normal;
 	font-weight: 900;
 	line-height: 44px;
@@ -34,8 +29,8 @@
 	border: 2px solid #407BFF;
 	border-radius: 50px;
 	color: #9F9F9F;
-	padding: 40px;
-	margin-top: 40px;
+	padding: 30px 30px;
+	margin-top: 20px;
 	font-family: Montserrat;
 	font-size: 20px;
 	font-style: italic;
@@ -62,7 +57,7 @@
 
 }
 .sm_10{
-	margin-top: 30px;
+	margin-top: 20px;
 }
 .blue__link{
 	margin-top: 30px;
@@ -77,7 +72,9 @@
 	
 }
 .captcha{
-	margin-top: 30px;
+	margin-top: 20px;
+	width: 65px;
+	height: 65px;
 }
 .captcha__block{
 	text-align: left;
@@ -87,11 +84,17 @@
 	width: 100%;
 }
 .first_active_login{
+	transition: all 0.3s ease 0s;
+}
+.first_active_login:hover{
+	background: #FF5D46 !important;
+}
+.first_active_login{
 	text-align: center;
 	border-radius: 50px;
 	border: none;
 	background-color: #FF725E;
-	margin-top: 60px;
+	margin-top: 20px;
 	border: 1px solid rgba(255, 114, 94,0.32);
 }
 .first_active_text_login{
@@ -102,11 +105,11 @@
 	line-height: 24px;
 	letter-spacing: 0.02em;
 	color: white;
-	padding: 29px 70px ;
+	padding: 19px 40px ;
 	margin: 0px !important;
 }
 .vopros{
-	margin-top: 30px;
+	margin-top: 15px;
 	font-family: Montserrat;
 	font-size: 18px;
 	font-style: normal;
@@ -116,4 +119,116 @@
 	text-align: left;
 	color: #263657;
 	text-align: center;
+}
+@media only screen and (max-width: 1000px) {
+	.title__login{
+		font-family: Montserrat;
+font-size: 26px;
+font-style: normal;
+font-weight: 900;
+line-height: 32px;
+letter-spacing: 0.02em;
+text-align: left;
+color: #263657;
+	}
+	.captcha{
+		width: 45px;
+		height: 45px;
+	}
+.first_active_text_login{
+	font-family: Montserrat;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 15px;
+letter-spacing: 0.035em;
+text-align: left;
+
+	color: white;
+	padding: 29px 70px ;
+	margin: 0px !important;
+}
+.vopros{
+		font-family: Montserrat;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 15px;
+letter-spacing: 0.035em;
+text-align: left;
+	color: #263657;
+	text-align: center;
+}
+.blue__link{
+		font-family: Montserrat;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 15px;
+letter-spacing: 0.035em;
+text-align: left;
+}
+.block{	
+	width: 100%;
+	padding: 40px 25px 40px 25px !important	;
+}
+.first_active_text_login{
+	padding: 12px 30px ;
+}
+#active_element_inputes_m{
+	border: 2px solid #407BFF;
+	border-radius: 50px;
+	color: #9F9F9F;
+	padding: 10px 19px !important;
+	margin-top: 40px;
+	font-family: Montserrat;
+	font-size: 20px;
+	font-style: italic;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	color: #263657;
+
+}
+#active_element_inputes_2{
+	border: 2px solid #407BFF;
+	border-radius: 50px;
+	color: #9F9F9F;
+		padding: 10px 19px !important	;
+	margin-top: 30px;
+	height: 87px;
+	font-family: Montserrat;
+	font-size: 20px;
+	font-style: italic;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	color: #263657;
+
+}
+.first_active_login{
+	margin-top: 15px;
+}
+.login__block{
+	margin-bottom: 75px !important;
+	text-align: center !important;
+}
+#active_element_inputes_m{
+	border: 2px solid #407BFF;
+	border-radius: 50px;
+	color: #9F9F9F;
+	padding: 40px;
+	margin-top: 20px;
+	font-family: Montserrat;
+	font-size: 20px;
+	font-style: italic;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	color: #263657;
+
+}
+.vopros{
+	margin-top: 15px !important;
+}
 }
