--- a/plugins/slick/slick-theme-14.css
+++ b/plugins/slick/slick-theme-14.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('ajax-loader.gif') center center no-repeat;
+    background: #fff url('ajax-loader-14.gif') center center no-repeat;
 }
 
 /* Icons */
@@ -12,8 +12,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('fonts/slick.eot');
-    src: url('fonts/slick-1.eot') format('embedded-opentype'), url('fonts/slick.woff') format('woff'), url('fonts/slick.ttf') format('truetype'), url('fonts/slick.svg') format('svg');
+    src: url('fonts/slick-28.eot');
+    src: url('fonts/slick-29.eot') format('embedded-opentype'), url('fonts/slick-14.woff') format('woff'), url('fonts/slick-14.ttf') format('truetype'), url('fonts/slick-14.svg') format('svg');
 }
 /* Arrows */
 .slick-prev,
