--- a/style/marginfix-38.css
+++ b/style/marginfix-38.css
@@ -161,7 +161,7 @@ color: #9F9F9F !important;
 	color: #9F9F9F;
 	padding-left: 30px;	
 	width: 100%;
-	padding: 17px 45px !important;
+	padding: 17px 45px;
 }
 .form-select{
 	position: relative;
