--- a/style/index-9.css
+++ b/style/index-9.css
@@ -525,6 +525,10 @@ section
 	margin-top: 70px;
 	align-items: center;
 }
+.element_image{
+			width: 50px;
+			height: 50px;
+}
 @media only screen and (max-width: 1000px) {
 	.row__title
 	{
@@ -554,6 +558,7 @@ section
 	.element_image{
 			width: 50px;
 			height: 50px;
+}
 
 }
 @media only screen and (max-width: 700px) {
