--- a/style/balance.css
+++ b/style/balance.css
@@ -28,7 +28,7 @@
 	color: #9F9F9F;
 	padding-left: 30px;	
 	width: 100%;
-	padding: 17px 45px !important;
+	padding: 17px 45px;
 }
 .form_up{
 	position: relative;
