--- a/style/tickets.css
+++ b/style/tickets.css
@@ -1,6 +1,6 @@
 .tickets {
-  	display: grid;
-  	justify-content: center;
+	display: flex;
+  	flex-direction: column;
   }
 
 @media screen and (max-width: 600px) {
