--- a/pages/index.css
+++ b/pages/index.css
@@ -30,50 +30,6 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
 
-/* Блок profile*/
-/* @import url('../blocks/profile/profile.css');
-@import url('../blocks/profile/__info/profile__info.css');
-@import url('../blocks/profile/__img/profile__img.css');
-@import url('../blocks/profile/__img-container/profile__img-container.css');
-@import url('../blocks/profile/__user-info/profile__user-info.css');
-@import url('../blocks/profile/__name/profile__name.css');
-@import url('../blocks/profile/__name/profile__name.css');
-@import url('../blocks/profile/__profession/profile__profession.css');
-@import url('../blocks/profile/__edit-btn/profile__edit-btn.css');
-@import url('../blocks/profile/__add-btn/profile__add-btn.css'); */
-
-/* Блок journey*/
-/* @import url('../blocks/journey/journey.css');
-@import url('../blocks/journey/__list/journey__list.css');
-@import url('../blocks/journey/__item/journey__item.css');
-@import url('../blocks/journey/__img-btn/journey__img-btn.css');
-@import url('../blocks/journey/__img/journey__img.css');
-@import url('../blocks/journey/__description/journey__description.css');
-@import url('../blocks/journey/__title/journey__title.css');
-@import url('../blocks/journey/__like-container/journey__like-container.css');
-@import url('../blocks/journey/__like-btn/journey__like-btn.css');
-@import url('../blocks/journey/__like-digit/journey__like-digit.css');
-@import url('../blocks/journey/__delete-btn/journey__delete-btn.css');
-@import url('../blocks/journey/__like-btn/_active/journey__like-btn_active.css'); */
-
-/* Блок popup*/
-/* @import url('../blocks/popup/popup.css');
-@import url('../blocks/popup/_opened/popup_opened.css');
-@import url('../blocks/popup/__container/popup__container.css');
-@import url('../blocks/popup/__title/popup__title.css');
-@import url('../blocks/popup/__form/popup__form.css');
-@import url('../blocks/popup/__close-btn/popup__close-btn.css');
-@import url('../blocks/popup/__input/popup__input.css');
-@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
-@import url('../blocks/popup/__error/popup__error.css');
-@import url('../blocks/popup/__error/_visible/popup__error_visible.css');
-@import url('../blocks/popup/__button/popup__button.css');
-@import url('../blocks/popup/__button//_disabled/popup__button_disabled.css');
-@import url('../blocks/popup/__show-content/popup__show-content.css');
-@import url('../blocks/popup/__img-container/popup__img-container.css');
-@import url('../blocks/popup/__img/popup__img.css');
-@import url('../blocks/popup/__caption/popup__caption.css'); */
-
 @import url('../blocks/confidentiality/confidentiality.css');
 
 @import url('../blocks/non-block/non-block.css');
@@ -91,6 +47,8 @@
 @import url('../blocks/choice/choice.css');
 
 @import url('../blocks/culc/culc.css');
+
+@import url('../blocks/faq/faq.css');
 
 /* Блок footer*/
 @import url('../blocks/footer/footer.css');
