--- a/blocks/btn/btn.css
+++ b/blocks/btn/btn.css
@@ -8,4 +8,5 @@
   transition: all .2s ease-in-out;
   text-decoration: none;
   text-align: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
