--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -36,6 +36,7 @@
   box-sizing: border-box;
   gap: 9px;
   margin: 5px 24px;
+  min-height: 52px;
 }
 
 .faq__announce_opened {
@@ -96,7 +97,8 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
-  margin: 15px 0;
+  /* margin: 15px 0; */
+  margin: 0;
 }
 
 @media screen and (max-width: 800px) {
@@ -115,13 +117,13 @@
   }
 
   .faq__item {
-    display: flex;
     min-height: 52px;
+    height: 100%;
   }
 
   .faq__subtitle {
     font-size: 14px;
-    margin: 10px 0;
+    /* margin: 10px 0; */
   }
 
   .faq__button {
