feat: добавить раздел know

--- a/pages/index.css
+++ b/pages/index.css
@@ -50,6 +50,8 @@
 
 @import url('../blocks/faq/faq.css');
 
+@import url('../blocks/know/know.css');
+
 /* Блок footer*/
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
