--- a/blocks/culc/culc.css
+++ b/blocks/culc/culc.css
@@ -43,6 +43,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @media screen and (max-width: 600px) {
