--- a/pages/index.css
+++ b/pages/index.css
@@ -52,6 +52,8 @@
 
 @import url('../blocks/know/know.css');
 
+@import url('../blocks/advantages/advantages.css');
+
 /* Блок footer*/
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
