--- a/blocks/advantages/advantages.css
+++ b/blocks/advantages/advantages.css
@@ -1,7 +1,7 @@
 .advantages {
   max-width: var(--width-max);
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .advantages__phone-list {
   width: 100%;
@@ -11,7 +11,7 @@
   list-style: none;
   display: flex;
   justify-content: center;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .advantages__item {
@@ -25,7 +25,7 @@
   background-color: red;
 }
 .advantages__item {
-  transform: scale(80%);
+  transform: scale(90%) translateY(10%);
   transition: all .4s linear;
 }
 
