--- a/blocks/confidentiality/confidentiality.css
+++ b/blocks/confidentiality/confidentiality.css
@@ -32,11 +32,12 @@
     padding: 50px 10px;
     margin: calc(var(--space-primary)*2) auto 0;
     width: calc(100% - 30px*2);
+    border-radius: 10px;
   }
 }
 
-@media screen and (max-width: 1160px) {
-  .confidentiality {
-    border-radius: 10px;
+@media screen and (max-width: 700px) {
+  .confidentiality__title{
+    font-size: 23px;
   }
 }
