--- a/pages/index.css
+++ b/pages/index.css
@@ -58,6 +58,9 @@
 
 @import url('../blocks/payment/payment.css');
 
+@import url('../blocks/optimization/optimization.css');
+
+
 /* Блок footer*/
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
