--- a/blocks/cyrcle/cyrcle.css
+++ b/blocks/cyrcle/cyrcle.css
@@ -82,7 +82,7 @@
   position: absolute;
   top: calc(var(--cyrcle-item-width) * (-1) / 2);
   left: calc(var(--cyrcle-width) / 1.75);
-  transform-origin: 40px calc(var(--cyrcle-width) / 1.75);
+  transform-origin: calc(var(--cyrcle-item-width) / 2) calc(var(--cyrcle-width) / 1.75);
   filter: drop-shadow(0px 4px 20px rgba(178, 185, 220, 0.43));
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
