--- a/blocks/cyrcle/cyrcle.css
+++ b/blocks/cyrcle/cyrcle.css
@@ -187,9 +187,9 @@
   .cyrcle__item {
     border-radius: 50%;
     position: absolute;
-    top: calc(var(--cyrcle-item-width) * (-1) / 1.7);
-    left: calc(var(--cyrcle-width) / 2);
-    transform-origin: 40px calc(var(--cyrcle-width) / 1.75);
+    top: calc(var(--cyrcle-item-width) * (-1) / 1.75);
+    left: 55%;
+    transform-origin: calc(var(--cyrcle-item-width) / 2) calc(var(--cyrcle-width) / 1.75);
     filter: drop-shadow(0px 4px 20px rgba(178, 185, 220, 0.43));
   }
   .cyrcle__button {
