feat: разработать блоки intro

--- a/blocks/optimization/optimization.css
+++ b/blocks/optimization/optimization.css
@@ -238,7 +238,7 @@
 
   .optimization__services {}
   .optimization__description  {
-    margin: 20px 0 0;
+    margin: 20px 0 0 10px;
     padding: 0;
   }
 }
